# kgsim

./: README.md  __init__.py  environment.py  fields.py  parsing.py  plotting.py  pyproject.toml  setup.py  simulation.py  utils.py
dhybridr/: dhybridr.py  initializer.py  io.py
environment/: Keyan.py  __init__.py  anvil.py  defaultPC.py
src/kgsim/: __init__.py  fields.py  parsing.py  particles.py  plotting.py  simulation.py  typing.py  utils.py
src/kgsim/athena/: __init__.py  athena.py  athena_read.py
src/kgsim/dhybridr/: __init__.py  anvil_submit.py  dhybridr.py  initializer.py  io.py  turbulence.py
src/kgsim/environment/: Keyan.py  __init__.py  anvil.py  defaultPC.py
src/kgsim/fields/: __init__.py  calc.py  scalar.py  vector.py
src/kgsim/templates/: __init__.py
src/kgsim/tristan/: __init__.py  kappa.py  tristan.py
tests/: main.py  test_fields.py  test_particles.py
