[project]
name = "kgsim"
version = "0.1.22"
description = "A library to interact with simulations with."
authors = [
  { name="Keyan Gootkin", email="keyangootkin@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "kbasic>=0.1.2",
    "kplot>=1.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
